--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,8 +9,9 @@
         tools:showIn="@layout/app_bar_main"
         tools:context=".MainActivity">
     <com.pierbezuhoff.dodeca.DodecaView
+            android:id="@+id/dodecaView"
             android:layout_width="0dp"
-            android:layout_height="0dp" android:id="@+id/dodecaView"
+            android:layout_height="0dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
