--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,28 +7,16 @@
         <item
                 android:id="@+id/nav_load"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="Load"/>
-        <item
-                android:id="@+id/nav_go"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="Go"/>
-        <item
-                android:id="@+id/nav_trace"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Trace"/>
+                android:title="some parameter"/>
     </group>
 
-    <!--<item android:title="Communicate">-->
-        <!--<menu>-->
-            <!--<item-->
-                    <!--android:id="@+id/nav_manage"-->
-                    <!--android:icon="@drawable/ic_menu_manage"-->
-                    <!--android:title="Tools"/>-->
-            <!--<item-->
-                    <!--android:id="@+id/nav_send"-->
-                    <!--android:icon="@drawable/ic_menu_send"-->
-                    <!--android:title="Send"/>-->
-        <!--</menu>-->
-    <!--</item>-->
+    <item android:title="Communicate">
+        <menu>
+            <item
+                    android:id="@+id/nav_send"
+                    android:icon="@drawable/ic_menu_send"
+                    android:title="Send"/>
+        </menu>
+    </item>
 
 </menu>
