--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -24,6 +24,11 @@
             android:title="@string/trace_button_title"
             app:showAsAction="always"/>
     <item
+            android:id="@+id/app_bar_clear"
+            android:icon="@drawable/icon_erase"
+            android:title="@string/clear_button_title"
+            app:showAsAction="always"/>
+    <item
             android:id="@+id/app_bar_settings"
             android:icon="@drawable/icon_settings"
             android:title="@string/settings_button_title"
