--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -29,6 +29,11 @@
             android:title="@string/trace_button_title"
             app:showAsAction="always"/>
     <item
+            android:id="@+id/app_bar_change_color"
+            android:icon="@drawable/icon_change_color"
+            android:title="@string/change_color_button_title"
+            app:showAsAction="always"/>
+    <item
             android:id="@+id/app_bar_clear"
             android:icon="@drawable/icon_erase"
             android:title="@string/clear_button_title"
