--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -28,11 +28,13 @@
             android:icon="@drawable/icon_trace"
             android:title="@string/trace_button_title"
             app:showAsAction="always"/>
+    <!-- TODO: find/write decent color picker
     <item
             android:id="@+id/app_bar_change_color"
             android:icon="@drawable/icon_change_color"
             android:title="@string/change_color_button_title"
             app:showAsAction="always"/>
+    -->
     <item
             android:id="@+id/app_bar_clear"
             android:icon="@drawable/icon_erase"
