--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -29,7 +29,7 @@
             android:title="@string/trace_button_title"
             app:showAsAction="always"/>
     <!-- TODO: find/write decent color picker
-    <item
+    <view
             android:id="@+id/app_bar_change_color"
             android:icon="@drawable/icon_change_color"
             android:title="@string/change_color_button_title"
