--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,7 +18,7 @@
             app:layout_constraintStart_toStartOf="parent"
     />
 
-    <android.support.design.widget.CoordinatorLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
@@ -27,15 +27,15 @@
             tools:context=".MainActivity"
             app:layout_constraintBottom_toBottomOf="parent">
 
-        <android.support.design.bottomappbar.BottomAppBar
+        <com.google.android.material.bottomappbar.BottomAppBar
                 android:id="@+id/bar"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_gravity="start|bottom"
                 android:backgroundTint="?attr/colorPrimary"
                 android:theme="@style/AppTheme.AppBarOverlay">
-        </android.support.design.bottomappbar.BottomAppBar>
+        </com.google.android.material.bottomappbar.BottomAppBar>
 
-    </android.support.design.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
