--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -2,16 +2,10 @@
 <resources>
     <string-array name="shapes">
         <item>Окружность</item>
+        <item>Окружность с фиксированной точкой</item>
         <item>Квадрат</item>
         <item>Крест</item>
         <item>Вертикальная черта</item>
         <item>Горизонтальная черта</item>
-    </string-array>
-    <string-array name="shapesValues">
-        <item>circle</item>
-        <item>square</item>
-        <item>cross</item>
-        <item>vertical_bar</item>
-        <item>horizontal_bar</item>
     </string-array>
 </resources>
