--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,6 +2,7 @@
 <resources>
     <string-array name="shapes">
         <item>Circle</item>
+        <item>Pointed circle</item>
         <item>Square</item>
         <item>Cross</item>
         <item>Vertical bar</item>
@@ -9,6 +10,7 @@
     </string-array>
     <string-array name="shapesValues">
         <item>circle</item>
+        <item>pointed_circle</item>
         <item>square</item>
         <item>cross</item>
         <item>vertical_bar</item>
