--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="349dp"
-            android:layout_height="115dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:gravity="top|end">
+            android:gravity="top|end"
+            android:background="@android:color/background_light" android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/stat">
         <TextView
                 android:text="# of updates"
                 android:layout_width="wrap_content"
@@ -31,10 +32,10 @@
                 android:id="@+id/n_updates"
         />
         <TextView
-                android:text="UPS"
+                android:text="20 updates per #"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/ups"/>
+                android:id="@+id/updates_20"/>
     </LinearLayout>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
