--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:gravity="top|end"
-            android:background="@android:color/background_light" android:layout_width="wrap_content"
+            android:background="@color/translucentLightBackground" android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/stat">
         <TextView
                 android:text="# of updates"
