new option: MainActivity.LIMITED_VERSION

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,27 +15,39 @@
                 android:key="show_all_circles"
                 android:defaultValue="false"
                 android:title="@string/show_all_circles_title"
-                android:summary="@string/show_all_circles_summary"/>
+                android:summary="@string/show_all_circles_summary"
+        />
         <!-- NOTE: not in master branch -->
         <SwitchPreference
                 android:key="show_centers"
                 android:defaultValue="false"
-                android:title="@string/show_centers_title"/>
+                android:title="@string/show_centers_title"
+        />
+        <ListPreference
+                android:key="shape"
+                android:title="@string/shape_title"
+                android:entries="@array/shapes"
+                android:entryValues="@array/shapesValues"
+                android:defaultValue="circle"
+                android:summary="@string/shape_summary" />
         <!-- NOTE: not in master branch -->
         <SwitchPreference
                 android:key="rotate_shapes"
                 android:defaultValue="false"
                 android:title="@string/rotate_shapes_title"
-                android:summary="@string/rotate_shapes_summary"/>
+                android:summary="@string/rotate_shapes_summary"
+        />
         <!-- NOTE: not in master branch -->
         <SwitchPreference
                 android:key="show_outline"
                 android:defaultValue="false"
-                android:title="@string/show_outline_title"/>
+                android:title="@string/show_outline_title"
+        />
         <SwitchPreference
                 android:key="reverse_motion"
                 android:defaultValue="false"
-                android:title="@string/reverse_motion"/>
+                android:title="@string/reverse_motion"
+        />
         <Preference
                 android:key="autocenter"
                 android:title="@string/autocenter_title"/>
@@ -44,6 +56,7 @@
                 android:defaultValue="true"
                 android:title="@string/always_autocenter_title"
                 android:summary="@string/always_autocenter_summary" />
+        <!-- NOTE: not in master branch -->
         <SwitchPreference
                 android:key="show_stat"
                 android:defaultValue="false"
@@ -81,13 +94,6 @@
         <!--android:inputType="numberDecimal"-->
         <!--android:digits="0123456789"-->
         <!--android:numeric="integer"/>-->
-        <ListPreference
-                android:key="shape"
-                android:title="@string/shape_title"
-                android:entries="@array/shapes"
-                android:entryValues="@array/shapesValues"
-                android:defaultValue="circle"
-                android:summary="@string/shape_summary" />
         <Preference
                 android:key="default_ddu"
                 android:title="@string/restore_default_ddu_title" />
