--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,13 +26,13 @@
             android:background="@color/translucentLightBackground" android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/stat">
         <TextView
-                android:text="# of updates"
+                android:text="@string/stat_n_updates_initial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/n_updates"
         />
         <TextView
-                android:text="20 updates per #"
+                android:text="@string/stat_20_updates_per_initial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/updates_20"/>
