html almost done

--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -6,8 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.pierbezuhoff.dodeca.HelpActivity" android:orientation="vertical">
-    <TextView
-            android:text="TextView"
+    <WebView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/help" android:layout_margin="8dp"/>
 </LinearLayout>
