--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -27,7 +27,7 @@
                 android:key="shape"
                 android:title="@string/shape_title"
                 android:entries="@array/shapes"
-                android:entryValues="@array/shapesValues"
+                android:entryValues="@array/shapes_values"
                 android:defaultValue="circle"
                 android:summary="@string/shape_summary" />
         <!-- NOTE: not in master branch -->
@@ -56,6 +56,13 @@
                 android:defaultValue="true"
                 android:title="@string/always_autocenter_title"
                 android:summary="@string/always_autocenter_summary" />
+        <ListPreference
+                android:key="canvas_factor"
+                android:defaultValue="2"
+                android:entries="@array/canvas_factors"
+                android:entryValues="@array/canvas_factors"
+                android:title="@string/canvas_factor_title"
+                android:summary="@string/canvas_factor_summary" />
         <!-- NOTE: not in master branch -->
         <SwitchPreference
                 android:key="show_stat"
