--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,4 +22,13 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+
+    <string-array name="speeds">
+        <item>1</item>
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
+        <item>20</item>
+        <item>50</item>
+    </string-array>
 </resources>
