--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="shapes_declensions">
+        <item>Circle</item>
+        <item>Pointed circle</item>
+        <item>Square</item>
+        <item>Cross</item>
+        <item>Vertical bar</item>
+        <item>Horizontal bar</item>
+    </string-array>
     <string-array name="shapes">
         <item>Circle</item>
         <item>Pointed circle</item>
@@ -29,6 +37,8 @@
         <item>5</item>
         <item>10</item>
         <item>20</item>
+        <item>30</item>
+        <item>40</item>
         <item>50</item>
     </string-array>
 </resources>
