--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="shapes_declensions">
-        <item>Circle</item>
-        <item>Square</item>
-        <item>Cross</item>
-        <item>Vertical bar</item>
-        <item>Horizontal bar</item>
+        <item>circle</item>
+        <item>square</item>
+        <item>cross</item>
+        <item>vertical bar</item>
+        <item>horizontal bar</item>
     </string-array>
     <string-array name="shapes">
         <item>Circle</item>
