--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- NOTE autocompletion worked when here was no androidx.preference -->
 <androidx.preference.PreferenceScreen
         android:key="preference_screen"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -75,14 +76,13 @@
                 android:summary="@string/speed_summary"
         />
         <!-- NOTE: advanced -->
-        <SeekBarPreference
-                android:key="speed_seekbar"
-                android:title="Speed"
-                android:summary="Make %d updates in a row"
-                android:defaultValue="1"
-                android:max="50"
-        />
-
+        <!--<SeekBarPreference-->
+                <!--android:key="speed_seekbar"-->
+                <!--android:title="Speed"-->
+                <!--android:summary="Make %d updates in a row"-->
+                <!--android:defaultValue="1"-->
+                <!--android:max="50"-->
+        <!--/>-->
         <!-- NOTE: advanced -->
         <SwitchPreference
                 android:key="show_stat"
