--- a/app/src/main/res/drawable/ic_restart.xml
+++ b/app/src/main/res/drawable/ic_restart.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-            android:fillColor="#FF000000"
-            android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+        android:fillColor="#FF000000"
+        android:pathData="M12,5V1L7,6l5,5V7c3.31,0 6,2.69 6,6s-2.69,6 -6,6 -6,-2.69 -6,-6H4c0,4.42 3.58,8 8,8s8,-3.58 8,-8 -3.58,-8 -8,-8z"/>
 </vector>
