--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -2,11 +2,14 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.pierbezuhoff.dodeca.HelpActivity" android:orientation="vertical">
+        tools:context="com.pierbezuhoff.dodeca.HelpActivity"
+        android:orientation="vertical"
+>
     <WebView
+            android:id="@+id/help"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/help" android:layout_margin="8dp"/>
+            android:layout_height="wrap_content"
+    />
 </LinearLayout>
