--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+>
 
     <com.pierbezuhoff.dodeca.DodecaView
             android:id="@+id/dodecaView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
     />
 
     <LinearLayout
+            android:id="@+id/stat"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:gravity="top|end"
-            android:background="@color/translucentLightBackground" android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/stat">
+            android:background="@color/translucentLightBackground"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+    >
         <TextView
                 android:text="@string/stat_n_updates_initial"
                 android:layout_width="wrap_content"
@@ -35,7 +42,8 @@
                 android:text="@string/stat_20_updates_per_initial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/updates_20"/>
+                android:id="@+id/updates_20"
+        />
     </LinearLayout>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -44,7 +52,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+    >
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/bar"
@@ -52,9 +61,16 @@
                 android:layout_width="match_parent"
                 android:layout_gravity="bottom"
                 app:buttonGravity="bottom"
-                android:background="@color/colorPrimaryTranslucent"
+                android:background="@color/toolbarColor"
         >
-            <!--android:theme="@style/AppTheme.AppBarOverlay"-->
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+            >
+                <include layout="@layout/toolbar1"/>
+                <include layout="@layout/toolbar2"/>
+            </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
