--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -21,7 +21,7 @@
     <item
             android:id="@+id/app_bar_go"
             android:icon="@drawable/icon_play"
-            android:title="@string/go_button_title"
+            android:title="@string/play_button_title"
             app:showAsAction="always"/>
     <item
             android:id="@+id/app_bar_next_step"
